# cinitpp

./: .cinitpp.json  .gitignore  CMakeLists.txt  README.md  makefile  readme.md
.github/: CODEOWNERS  pull_request_template.md
include/: cfgManager.hh  cfgReader.hh  dir.hh  directoryItem.hh  enum.hh  errHandler.hh  file.hh  init.hh  input.hh  inputData.hh  json.hh  main.hh  parse.hh  rapidjson.hh  util.hh
include/config/: cfgReader.hh  cfgWriter.hh
src/: cfgManager.cc  cfgReader.cc  dir.cc  directoryItem.cc  errHandler.cc  file.cc  init.cc  input.cc  json.cc  main.cc  parse.cc  util.cc
src/config/: cfgReader.cc  cfgWriter.cc
